@@ -1,5 +1,15 @@
 2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>
 
+	* flumotion/test/test_hls_ring.py:
+	Use new applestreamer namespace and fix pep8
+	* flumotion/test/test_mpegts.py:
+	* flumotion/test/test_ts_segmenter.py:
+	Use new applestreamer namespace and add project's folder to
+	FLU_PROJECT_PATH to load our test component in the registry
+
+
+2009-12-28  Andoni Morales Alastruey  <amorales@flumotion.com>
+
 	* flumotion/component/consumers/applestreamer/resources.py:
 	Import resource and changed twisted's resource to web_resource
 
